--- a/index.html
+++ b/index.html
@@ -8,8 +8,35 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>EXAMEN EXTRAORDINARIO</h1>
+    
+    <center><h1>Colores de resistencia</h1></center>
+
+    <br>
+
+    <div class="dvs">
+        <div class="col1">
+            <div class="banda1" id="color1" onclick="cambio1()"></div>
+        </div>
+        
+
+        <div  class="banda2"id="color2" onclick="cambio2()"></div>
+
+        <div class="banda3" id="color3" onclick="cambio3()"></div>
+
+        <div  class="banda4" id="color4" onclick="cambio4()"></div>
+    </div>
+
+    <br><br>
+
+    <div class="conten">
+        <div id="valBand1"></div>
+        <div id="valBand2"></div>
+        <div id="valBand3"></div>
+        <div id="valBand4"></div>
+    </div>
+
 
     <script src="js/script.js"></script>
+
 </body>
 </html>
